--- a/src/main/webapp/checkIn.html
+++ b/src/main/webapp/checkIn.html
@@ -302,7 +302,7 @@
                                 for(var j=1;j<days;j++){
                                     arr.push({
                                         money:checkinData[i][money],
-                                        time:addDate(new Date(),i)
+                                        time:addDate(new Date(),j)
                                     })
                                 }
                                 checkinData[i]['everydayRoomPriceBOS'] = arr;
