--- a/src/main/webapp/home2center.html
+++ b/src/main/webapp/home2center.html
@@ -373,7 +373,7 @@
                     for(var j=1;j<days;j++){
                         arr.push({
                             money:checkinData[i][money],
-                            time:addDate(new Date(),i)
+                            time:addDate(new Date(),j)
                         })
                     }
                     checkinData[i]['everydayRoomPriceBOS'] = arr;
