--- a/src/main/webapp/home2center.html
+++ b/src/main/webapp/home2center.html
@@ -199,7 +199,7 @@
 </script>
 <script>
     var element, laydate, form, $, layer, index, table, data = [];var customer_source_before = '散客';
-    var tempRandom = Date.now().toString().substring(5),pickRoomTypeData;
+    var tempRandom = -Date.now().toString().substring(5),pickRoomTypeData;
     var state = {
         channel: 2// 1电话入住  2步入 3网络 4机构
         , roomType: 1//1,全天房,2,钟点房，3,免费房
