页面： 修改首页在住修改页面 修改首页弹出层页面 修改订单BUG 修改客房BUG
优化CSS样式

--- a/src/main/webapp/iframe_home.html
+++ b/src/main/webapp/iframe_home.html
@@ -531,7 +531,7 @@
 
         //入住换房
         $('#checkInRoom').on('click', function () {
-            parent.location.href = 'changeRoom.html?id=' + orderChildId + '&roomId=' + id + '&endTime=' + endTime.time + '&phone' + checkInPhone + '&roomAuxiliaryStatus=' + roomAuxiliaryStatus;
+            parent.location.href = 'changeRoom.html?id=' + orderChildId + '&roomId=' + id + '&endTime=' + endTime.time + '&phone=' + checkInPhone + '&roomAuxiliaryStatus=' + roomAuxiliaryStatus;
         });
 
         //预约入住
