--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -209,7 +209,7 @@
             orderState = data.value;
         });
 
-        //酒店数据绑定
+        //机构数据绑定
         function selectData() {
             renderSelect("channel", 'id', 'value', api.allChannel, form);
         }
