--- a/src/main/webapp/pre-check-out-report.html
+++ b/src/main/webapp/pre-check-out-report.html
@@ -136,7 +136,7 @@
             , limit: 10000
             , totalRow: true
             , cols: [[ //标题栏
-                {field: 'orderNumber', title: '订单号', rowspan: 2, totalRowText: "合计："} //rowspan即纵向跨越的单元格数
+                {field: 'orderNumber', width:180, title: '订单号', rowspan: 2, totalRowText: "合计："} //rowspan即纵向跨越的单元格数
                 , {field: 'name', title: '姓名', rowspan: 2}
 
                 , {field: 'value', title: '证件类型', rowspan: 2}
