--- a/src/main/webapp/chart.html
+++ b/src/main/webapp/chart.html
@@ -118,7 +118,9 @@
             //获取输入框内的时间
             var tt = $("#test6").val();
             //判断获取时间是否为空
+
             if (tt == '') {
+
                 var date = new Date();
                 var startTime = DateToLStr5(date);
                 var endTime = DateToLStr5(new Date(date.getTime() + (86400000 * 7)));
@@ -209,16 +211,16 @@
         search();
 
         function search() {
-            var urll = api.reportList;
+             var urll = api.reportList;
             var tt = $("#test6").val();
             if (tt == '') {
-                var startTime = DateToLStr2(new Date());
-                var endTime = DateToLStr2(new Date(Date.now() + (86400000 * 7)))
-                urll += "?startTime=" + startTime + "&endTime=" + endTime;
+                var startTime = DateToLStr3(new Date()).replace(/\//g,"-");
+                var endTime = DateToLStr3(new Date(Date.now() + (86400000 * 7))).replace(/\//g,"-");
+                urll += "?checkTime=" + startTime + "&endTime=" + endTime;
                 $("#test6").val(DateToLStr(new Date()).split(" ")[0] + " - " + DateToLStr(new Date(Date.now() + (86400000 * 7))).split(" ")[0])
 
             } else {
-                urll += "?startTime=" + DateToLStr2(new Date(tt.split(" - ")[0])) + "&endTime=" + DateToLStr2(new Date(tt.split(" - ")[1]));
+                urll += "?checkTime=" + DateToLStr3(new Date(tt.split(" - ")[0])).replace(/\//g,"-") + "&endTime=" + DateToLStr3(new Date(tt.split(" - ")[1])).replace(/\//g,"-");
             }
             var index = layer.load(1,{time:10*1000});
             $.getJSON(urll + "&random=" + Date.now(), function (rs) {
