--- a/src/main/webapp/residentStatement.html
+++ b/src/main/webapp/residentStatement.html
@@ -39,35 +39,25 @@
         var table = layui.table, $ = layui.$, form = layui.form, state = 0, title = '';
 
         $(function () {
-            state = parseInt(getUrl('s'));
-            title = state == 0 ? '在住' : '预离店';
-            document.title = title + '报表';
+
             resultInfo()
         });
 
         //获取
         function resultInfo() {
-            var obj = {};
-            if (state) {
-                obj.le = 1;
-            }
+
             $.ajax({
-                url: api.queryStatement,
+                url: 'order/getCheckInReport',
                 type: 'POST',
-                data: obj,
                 dataType: 'json',
                 success: function (data) {
-                    formatData(data.data.statement)
+                    formatData(data.data)
                 }
             })
         }
 
         function formatData(data) {
-            for (var i = 0, len = data.length; i < len; i++) {
-                data[i].endTime = layui.util.toDateString(data[i].endTime.time, 'yyyy-MM-dd HH:mm');
-                data[i].startTime = layui.util.toDateString(data[i].startTime.time, 'yyyy-MM-dd HH:mm');
-            }
-            console.log(data);
+
             tab.reload({data: JSON.parse(JSON.stringify(data))});
         }
 
@@ -98,39 +88,34 @@
             , limit: 10000
             , totalRow: true
             , cols: [[ //标题栏
-                {field: 'number', title: '订单号', rowspan: 2, totalRowText: "合计："} //rowspan即纵向跨越的单元格数
+                {field: 'orderNumber', width:180, title: '订单号', rowspan: 2, totalRowText: "合计："} //rowspan即纵向跨越的单元格数
                 , {field: 'name', title: '姓名', rowspan: 2}
-                , {
-                    field: 'idType', title: '证件类型', rowspan: 2, templet: function (data) {
-                        switch (data.idType) {
-                            case 1:
-                                return '身份证';
-                            case 2:
-                                return '港澳通行证';
-                            case 3:
-                                return '台胞证';
-                            case 4:
-                                return '护照';
-                            case 5:
-                                return '军官证';
-                            case 6:
-                                return '驾驶证';
-                        }
-                    }
-                }
-                , {field: 'idNumber', title: '证件号码', rowspan: 2}
+                , {field: 'value', title: '证件类型', rowspan: 2}
+                , {field: 'certificateNumber', title: '证件号码', rowspan: 2}
                 , {field: 'roomName', title: '房号', rowspan: 2}
-                , {field: 'roomType', title: '房型', rowspan: 2}
-                , {field: 'roomPrice', title: '房价', rowspan: 2, totalRow: true}
-                , {field: 'startTime', title: '入住时间', rowspan: 2}
-                , {field: 'endTime', title: '预离时间', rowspan: 2}
+                , {field: 'roomTypeName', title: '房型', rowspan: 2}
+                , {field: 'money', title: '当天价格', rowspan: 2, totalRow: true}
+                , {
+                    field: 'startTime', width:180, title: '入住时间', align: 'center', templet: function (data) {
+                        if (data.startTime)
+                            return DateToLStr(new Date(data.startTime.time))
+                        else return ''
+                    },rowspan: 2
+                }
+                , {
+                    field: 'endTime', width:180, title: '预离时间', align: 'center', templet: function (data) {
+                        if (data.endTime)
+                            return DateToLStr(new Date(data.endTime.time))
+                        else return ''
+                    },rowspan: 2
+                }
                 , {align: 'center', title: '收款明细', colspan: 3} //colspan即横跨的单元格数，这种情况下不用设置field和width
-                , {field: 'consumeCount', title: '总消费', rowspan: 2}
-                , {field: 'balance', title: '余额', rowspan: 2}
+                , {field: 'roomRate', title: '房费', rowspan: 2}
+                , {field: 'otherRate', title: '其他费用', rowspan: 2}
+                , {field: 'freeRateNum', title: '免单费用', rowspan: 2}
             ], [
-                {field: 'amt', title: '预授权'}
-                , {field: 'payCash', title: '现金'}
-                , {field: 'posPay', title: 'POS'}
+                {field: 'otherPayNum', title: '其他支付'}
+                , {field: 'payCashNum', title: '现金'}
             ]]
         });
     });
